# emskin

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_cn.md  cliff.toml  release.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/effect-plugins/: CLAUDE.md
crates/emskin/: CLAUDE.md  Cargo.toml  build.rs
crates/emskin-bar/src/: state.rs  workspace.rs
crates/emskin-dbus/: CLAUDE.md  Cargo.toml
crates/emskin-dbus-proxy/: Cargo.toml
crates/emskin-dbus-proxy/src/: main.rs
crates/emskin-dbus/src/: codec.rs  lib.rs  protocol.rs
crates/emskin-dbus/src/broker/: io.rs  mod.rs  state.rs
crates/emskin-dbus/src/ctl/: client.rs  mod.rs  server.rs
crates/emskin-dbus/src/dbus/: encode.rs  frame.rs  message.rs  mod.rs
crates/emskin-dbus/src/fcitx/: classify.rs  ic.rs  mod.rs  reply.rs
crates/emskin-dbus/src/rules/: cursor.rs  mod.rs
crates/emskin-dbus/tests/: cursor_rewrite.rs
crates/emskin/src/: dbus_broker.rs  focus.rs  input.rs  lib.rs  main.rs  state.rs  tick.rs  winit.rs
docs/: clipboard-flows.md  clipboard-protocols.md
eafvil/: CLAUDE.md  Cargo.toml
eafvil/src/: apps.rs  clipboard_x11.rs  input.rs  keymap.rs  main.rs  state.rs  winit.rs
eafvil/src/handlers/: compositor.rs  xdg_activation.rs  xdg_shell.rs  (+1 more)
effect-plugins/: CLAUDE.md
elisp/: eaf-eafvil.el  emskin-app.el  emskin-ipc.el  emskin-skeleton.el  emskin-workspace.el  emskin.el
emskin/: CLAUDE.md  Cargo.toml
emskin/src/: apps.rs  input.rs  lib.rs  main.rs  measure.rs  skeleton.rs  splash.rs  state.rs  tick.rs  winit.rs  workspace_bar.rs
emskin/src/effect/: chain.rs  mod.rs
emskin/src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs
emskin/src/ipc/: dispatch.rs  messages.rs
scripts/: record-splash.sh
(+13 files in other folders)
