[package]
name = "emskin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nested Wayland compositor for Emacs"

[dependencies]
effect-core = { path = "../effect-core" }
smithay.workspace = true
cosmic-text.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.2.1"
winit_crate = { package = "winit", version = "0.30", default-features = false }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "server", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"

[package.metadata.aur]
depends = ["wayland", "libxkbcommon", "libxkbcommon-x11", "mesa", "libinput", "seatd", "fontconfig", "freetype2", "xorg-xwayland"]
optdepends = ["emacs-wayland: pgtk Emacs (recommended)", "emacs: X11 Emacs (works via XWayland)"]
files = [
    ["assets/emskin.desktop", "/usr/share/applications/emskin.desktop"],
    ["assets/emskin.png", "/usr/share/pixmaps/emskin.png"],
]
