[package]
name = "emskin-dbus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Selective DBus session-bus proxy for nested Wayland compositors — name registry, policy rules, and IME coordinate translation"

[dependencies]
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
